# python-dev-template

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
